# rust-api-actix

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20250916034533_users.sql  20250916034537_todo.sql
src/: constants.rs  lib.rs  main.rs
src/config/: database.rs
src/errors/: app_error.rs
src/handlers/: auth.rs  mod.rs
src/middleware/: auth_middleware.rs  cors.rs  error_middleware.rs  mod.rs
src/models/: todo.rs  user.rs
src/repositories/: todo_repository.rs  user_repository.rs
src/routes/: auth.rs  mod.rs  todos.rs  users.rs
src/services/: user_service.rs
src/utils/: jwt.rs  password.rs
