[package]
name = "rust-api-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.28"
once_cell = "1.21.3"
regex = "1.10.6"
serde = "1.0.223"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "migrate"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
validator = { version = "0.18.0", features = ["derive"] }
